[package]
name = "vector_qa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.5.0"
condor = {path="../../Documents/condor"}
mako = {path="../../Documents/mako"}
serde_json = "1.0.59"
serde = "1.0.126"
clap = "3.0.0-beta.2"
hypernonsense = "0.4.0"
rand = "0.6.5"
text_io = "0.1.8"